added checking functionality